--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 								<li><a href="#work">Projects</a></li>
 								<li><a href="#about">Skills</a></li>
 								<li><a href="#contact">Contact</a></li>
+								<li><a href="https://storage.cloud.google.com/arr_portfolio_bucket/Arrington_Jacob_Resume.pdf" target="_blank">resume</a></li>
+
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -49,6 +51,7 @@
 								<span class="image main"><img src="https://res.cloudinary.com/dfnqaxcck/image/upload/v1687631081/blueridgemountainsnc-1500x609_mvckox.jpg" alt="tree covered mountains in full fall colors" /></span>
 								<p>I am a passionate software engineer with comprehensive training in various technologies including JavaScript, HTML, CSS, React, Redux, Python, Flask, SqlAlchemy, and SQLite3. My journey in App Academy has shaped my solid grounding in these languages and frameworks, propelling me to build innovative web applications.</p>
 								<p>In my free time, I'm drawn to the great outdoors with a passion for hiking and camping  I'm game for everything from a leisurely trail to a challenging mountainous expedition. If you'd like to chat about code, or share any impressive trail or campsite recommendations, know that I'm always open and interested!</p>
+								<p>Check out my <a href="https://storage.cloud.google.com/arr_portfolio_bucket/Arrington_Jacob_Resume.pdf" target="_blank" style="text-decoration: none; color: #00BFFF;">resume</a> to know more about my skills and experiences.</p>
 							</article>
 
 						<!-- Work -->
@@ -122,7 +125,9 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<p><i class="fas fa-mobile-alt"></i> </i>828-582-8106</p>
-								<form method="post" action="#">
+								<form
+								action="https://formspree.io/f/xbjvrwbp"
+								method="POST" >
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -391,9 +396,26 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</section>
 
 							</article>
+							
 
 					</div>
-
+					<ul style="list-style: none; padding: 0; margin-top: 5px; display: flex; flex-direction: row;">
+						<li style="margin-right: 10px;">
+							<a href="https://www.linkedin.com/in/jacob-arrington-190885278/" class="icon brands fa-linkedin">
+								<span class="label">LinkedIn</span>
+							</a>
+						</li>
+						<li style="margin-right: 10px;">
+							<a href="https://wellfound.com/u/jacob-arrington-1" class="icon brands fa-angellist">
+								<span class="label">AngelList</span>
+							</a>
+						</li>
+						<li style="margin-right: 10px;">
+							<a href="https://github.com/JacobArrington" class="icon brands fa-github">
+								<span class="label">GitHub</span>
+							</a>
+						</li>
+					</ul>
 				<!-- Footer -->
 					<footer id="footer">
 						<p class="copyright">&copy; Jacob Arrington. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
