updated phone number

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<img src="https://res.cloudinary.com/dfnqaxcck/image/upload/v1687629759/IMG-20210213-103333081_3_iogdwn.jpg" alt="Description of the image" style="width: 200px; height: 200px; border-radius: 50%;">
+						<img src="https://res.cloudinary.com/dfnqaxcck/image/upload/v1687629759/IMG-20210213-103333081_3_iogdwn.jpg" alt="me" style="width: 200px; height: 200px; border-radius: 50%;">
 						<!-- <div class="logo">
 							<span class="icon fa-gem"></span>
 						</div> -->
@@ -124,7 +124,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<p><i class="fas fa-mobile-alt"></i> </i>828-582-8106</p>
+								<p><i class="fas fa-mobile-alt"></i> </i>828-630-4014</p>
 								<form
 								action="https://formspree.io/f/xbjvrwbp"
 								method="POST" >
