--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								<span class="image main"><img src="https://res.cloudinary.com/dfnqaxcck/image/upload/v1687631081/blueridgemountainsnc-1500x609_mvckox.jpg" alt="tree covered mountains in full fall colors" /></span>
 								<p>I am a passionate software engineer with comprehensive training in various technologies including JavaScript, HTML, CSS, React, Redux, Python, Flask, SqlAlchemy, and SQLite3. My journey in App Academy has shaped my solid grounding in these languages and frameworks, propelling me to build innovative web applications.</p>
 								<p>In my free time, I'm drawn to the great outdoors with a passion for hiking and camping  I'm game for everything from a leisurely trail to a challenging mountainous expedition. If you'd like to chat about code, or share any impressive trail or campsite recommendations, know that I'm always open and interested!</p>
-								<p>Check out my <a href="https://storage.cloud.google.com/arr_portfolio_bucket/Arrington_Jacob_Resume.pdf" target="_blank" style="text-decoration: none; color: #00BFFF;">resume</a> to know more about my skills and experiences.</p>
+								<p>Check out my <a href="https://storage.googleapis.com/graphit_bucket/Portfolio/Arrington_Jacob_Resume%20(3).pdf" target="_blank" style="text-decoration: none; color: #00BFFF;">resume</a> to know more about my skills and experiences.</p>
 							</article>
 
 						<!-- Work -->
