changed title and resume link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Jacob Arrington</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -35,7 +35,7 @@
 								<li><a href="#work">Projects</a></li>
 								<li><a href="#about">Skills</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<li><a href="https://storage.cloud.google.com/arr_portfolio_bucket/Arrington_Jacob_Resume.pdf" target="_blank">resume</a></li>
+								<li><a href="https://storage.googleapis.com/graphit_bucket/Portfolio/Arrington_Jacob_Resume%20(3).pdf" target="_blank">resume</a></li>
 
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
